namespace TimeLedger.Core.Models.Event;

public enum EventType
{
    OneTime,
    Recurrence,
    Deadline
}