@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
hide empty members

title TimeLedger - Group Events Class Diagram

package "Presentation" #E3F2FD {
  class "Group Event Pages" as GroupEventPages
  class "Group Event DTOs" as GroupEventDTOs
}

package "Service" #E8F5E9 {
  interface IGroupEventService {
	+ GetAllForUser(actorUserId: int): IEnumerable<GroupEventListItemDto>
	+ Create(groupId: int, dto: CreateEventDto, actorUserId: int): (EventResponseDto, bool, IReadOnlyList<AccountInfoDto>)
  }

  class GroupEventService {
	- eventRepository: IEventRepository
	- groupRepository: IGroupRepository
	- userRepository: IUserRepository
  }
}

package "Core Model" #EDE7F6 {
  class Event {
	+ Id: int
	+ OwnerId: int
	+ Title: string
	+ Description: string?
	+ Location: string?
	+ AllowOverlap: bool
	+ StartTime: DateTime?
	+ EndTime: DateTime?
	+ DueAt: DateTime?
	+ RecurrenceInterval: int?
	+ RecurrenceValue: string?
	+ RecurrenceEndTime: DateTime?
	+ RecurrenceMaxOccurrences: int?
  }


  enum EventOwnerType {
	User
	Group
  }

  enum EventType {
	OneTime
	Recurrence
	Deadline
  }

  enum RecurrenceFrequency {
	Daily
	Weekly
	Monthly
	Yearly
  }
}

package "DTOs" #F3E5F5 {
  class CreateEventDto

  class EventResponseDto

  class GroupEventListItemDto 

  class AccountInfoDto 

  class RecurrenceRuleDto 
}

package "Repository" #FFF3E0 {
  interface IEventRepository
  interface IGroupRepository
  interface IUserRepository
}

GroupEventPages --> IGroupEventService
GroupEventPages --> GroupEventDTOs
GroupEventDTOs --> DTOs
IGroupEventService <|.. GroupEventService
GroupEventService ..> IEventRepository
GroupEventService ..> IGroupRepository
GroupEventService ..> IUserRepository
GroupEventService --> DTOs
GroupEventService --> DTOs
GroupEventListItemDto --> EventResponseDto
CreateEventDto --> RecurrenceRuleDto 
Event "1" ..> "1" EventType
Event "1" ..> "1" EventOwnerType
Event "1" ..> "0..1" RecurrenceFrequency
IEventRepository "1" --> "0..*" Event

@enduml